Add alt tags to images in Case Studies

--- a/case-studies/immunocore/index.html
+++ b/case-studies/immunocore/index.html
@@ -12,7 +12,7 @@ label: case-study
    <div class="container">
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/immunocore/immunocore-engineering-2.jpg" class="shadow">
+            <img src="/img/cases/immunocore/immunocore-engineering-2.jpg" class="shadow" alt="Visualisation of receptors embedded in the cell wall.">
          </div>
       </div>
 
@@ -46,8 +46,8 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/immunocore/immunocore-sketch-1.jpg" class="image-gallery shadow">
-            <img src="/img/cases/immunocore/immunocore-sketch-2.jpg" class="image-gallery shadow">
+            <img src="/img/cases/immunocore/immunocore-sketch-1.jpg" class="image-gallery shadow" alt="Story concepts and early sketches of ImmTAX engineering co-designed with Immunocore's science team.">
+            <img src="/img/cases/immunocore/immunocore-sketch-2.jpg" class="image-gallery shadow" alt="Early sketches of ImmTAX engineering.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -94,10 +94,10 @@ label: case-study
       <div class="container">            
          <div class="container-two-thirds shift">
             <div class="block-margin">
-               <img src="/img/cases/immunocore/immunocore-engineering-1.jpg" class="image-gallery shadow">
-               <img src="/img/cases/immunocore/immunocore-engineering-2.jpg" class="image-gallery shadow">
-               <img src="/img/cases/immunocore/immunocore-display.jpg" class="image-gallery shadow">
-               <img src="/img/cases/immunocore/immunocore-presentation.jpg" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-engineering-1.jpg" class="image-gallery shadow" alt="ImmTAX engineering process.">
+               <img src="/img/cases/immunocore/immunocore-engineering-2.jpg" class="image-gallery shadow" alt="Visualisation of receptors embedded in the cell wall.">
+               <img src="/img/cases/immunocore/immunocore-display.jpg" class="image-gallery shadow" alt="Antigen presentation on cell surface.">
+               <img src="/img/cases/immunocore/immunocore-presentation.jpg" class="image-gallery shadow" alt="Cross-presentation.">
             </div>
          </div>
          <div class="container-one-third shift-back">
@@ -110,10 +110,10 @@ label: case-study
 
          <div class="container-two-thirds shift">
             <div class="block-margin">
-               <img src="/img/cases/immunocore/immunocore-killing-1.jpg" class="image-gallery shadow">
-               <img src="/img/cases/immunocore/immunocore-killing-2.jpg" class="image-gallery shadow">
-               <img src="/img/cases/immunocore/immunocore-killing-4.jpg" class="image-gallery shadow">
-               <img src="/img/cases/immunocore/immunocore-killing-3.jpg" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-killing-1.jpg" class="image-gallery shadow" alt="ImmTAX mediates in T cell killing of a cancer cell.">
+               <img src="/img/cases/immunocore/immunocore-killing-2.jpg" class="image-gallery shadow" alt="Recruiting T cells to the cancer cell.">
+               <img src="/img/cases/immunocore/immunocore-killing-4.jpg" class="image-gallery shadow" alt="ImmTAX-mediated T cell killing detail.">
+               <img src="/img/cases/immunocore/immunocore-killing-3.jpg" class="image-gallery shadow" alt="Cancer cell killing with cytokine release.">
             </div>
          </div>
          <div class="container-one-third shift-back">
@@ -126,8 +126,8 @@ label: case-study
 
          <div class="container-two-thirds shift">
             <div class="block-margin">
-               <img src="/img/cases/immunocore/immunocore-mage-killing.jpg" class="image-gallery shadow">
-               <img src="/img/cases/immunocore/immunocore-serial-killing.jpg" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-mage-killing.jpg" class="image-gallery shadow" alt="MAGE killing of cancer cells by ImmTAX-mediated T cells.">
+               <img src="/img/cases/immunocore/immunocore-serial-killing.jpg" class="image-gallery shadow" alt="Serial killing of cancer cells by ImmTAX-mediated T cells.">
             </div>
          </div>
          <div class="container-one-third shift-back">
@@ -140,9 +140,9 @@ label: case-study
 
          <div class="container-two-thirds shift">
             <div class="block-margin">
-               <img src="/img/cases/immunocore/immunocore-logotype-2.png" class="image-gallery shadow">
-               <img src="/img/cases/immunocore/immunocore-manual-1.png" class="image-gallery shadow">
-               <img src="/img/cases/immunocore/immunocore-manual-2.png" class="image-gallery shadow">
+               <img src="/img/cases/immunocore/immunocore-logotype-2.png" class="image-gallery shadow" alt="New Immunocore logotype in various colour versions.">
+               <img src="/img/cases/immunocore/immunocore-manual-1.png" class="image-gallery shadow" alt="Brand manual defining how to use new brand assets.">
+               <img src="/img/cases/immunocore/immunocore-manual-2.png" class="image-gallery shadow" alt="Brand manual page.">
             </div>
          </div>
          <div class="container-one-third shift-back">
