--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -12,7 +12,7 @@ label: cases
             <p>
                I jointly spearheaded the vision, design, and alpha-launch of Evinova's new SaaS B2B product to solve the complexity crisis in clinical development.
             </p>
-            <a href="/case-studies/evinova/" class="image-link"><img src="/img/cases/evinova/evinova-site9.png" class="shadow"></a>
+            <a href="/case-studies/evinova/" class="image-link"><img src="/img/cases/evinova/evinova-site9.png" class="shadow" alt="Meeting with the Barcelona's Sant Joan de Déu pediatric trial site team in summer 2024."></a>
          </div>
 
 
@@ -22,7 +22,7 @@ label: cases
             <p>
                I turned around an underperforming UX team to deliver a successful redesign of a clinical study optimisation product at AstraZeneca by integrating six stand-alone tools into one.
             </p>
-            <a href="/case-studies/merlin/" class="image-link"><img src="/img/cases/merlin/merlin2.png" class="shadow"></a>
+            <a href="/case-studies/merlin/" class="image-link"><img src="/img/cases/merlin/merlin2.png" class="shadow" alt="Designing a schematic for a multi-arm clinical study in AstraZeneca's study design tool, Merlin."></a>
          </div>
 
 
@@ -32,7 +32,7 @@ label: cases
             <p>
                I led the design of a new entity exploration and selection product which accelerated access to AI predictions while reducing human errors and bias in defining model inputs.
             </p>
-            <a href="/case-studies/entity-explorer/" class="image-link"><img src="/img/cases/ee/ee-front.png" class="shadow"></a>
+            <a href="/case-studies/entity-explorer/" class="image-link"><img src="/img/cases/ee/ee-front.png" class="shadow" alt="Learning about the Parkinson disease entity in Entity Explorer, its definition, benchmark genes, and overlaps with related entities."></a>
          </div>
 
 
@@ -43,7 +43,7 @@ label: cases
             <p>
                I designed the new Target Triage product that accelerated drug discoverers' evaluation of AI-generated target predictions from hours to minutes.
             </p>
-            <a href="/case-studies/target-triage/" class="image-link"><img src="/img/cases/triage/triage-front.jpg" class="shadow"></a>
+            <a href="/case-studies/target-triage/" class="image-link"><img src="/img/cases/triage/triage-front.jpg" class="shadow" alt="Drug discoverer evaluating new target recommendations in the Target Triage tool."></a>
          </div>
 
 
@@ -54,7 +54,7 @@ label: cases
             <p>
                I invented an award-winning visualisation method that reveals patterns in data that would otherwise remain hidden. It is available in a full-feature desktop tool and a quick-access web app.
             </p>
-            <a href="/case-studies/sequence-bundles/" class="image-link"><img src="/img/cases/sb/sb-front8.png" class="shadow"></a>
+            <a href="/case-studies/sequence-bundles/" class="image-link"><img src="/img/cases/sb/sb-front8.png" class="shadow" alt="View from the Sequence Bundles web tool, an award-winning data visualisation method for protein sequence exploration."></a>
          </div>
 
 
@@ -64,7 +64,7 @@ label: cases
             <p>
                I helped advance Vivli's vision of a clinical trial data sharing platform from technical specs to a tangible experience in 6 weeks, leading to securing the backing of Vivli's consortium of partners.
             </p>
-            <a href="/case-studies/vivli/" class="image-link"><img src="/img/cases/vivli/vivli-front.jpg" class="shadow"></a>
+            <a href="/case-studies/vivli/" class="image-link"><img src="/img/cases/vivli/vivli-front.jpg" class="shadow" alt="Snapshot from the Vivli platform prototype showing an annotated search query and clinical study results with metadata."></a>
         </div>
 
 
@@ -75,7 +75,7 @@ label: cases
             <p>
                I designed and produced patient onboarding and training experiences for a clinical study of a smart inhaler for COPD.
             </p>
-            <a href="/case-studies/concept2/" class="image-link"><img src="/img/cases/concept2/concept2-front.jpg" class="shadow"></a>
+            <a href="/case-studies/concept2/" class="image-link"><img src="/img/cases/concept2/concept2-front.jpg" class="shadow" alt="Fragment from the inhalation sequence training video, helping patients correctly time their inhalation."></a>
         </div>
 
 
@@ -86,7 +86,7 @@ label: cases
             <p>
                I developed the brand and science communication assets that Immunocore (NASDAQ: <a href="https://www.nasdaq.com/market-activity/stocks/imcr">IMCR</a>) has been using for over a decade.
             </p>
-            <a href="/case-studies/immunocore/" class="image-link"><img src="/img/cases/immunocore/immunocore-front.jpg" class="shadow"></a>
+            <a href="/case-studies/immunocore/" class="image-link"><img src="/img/cases/immunocore/immunocore-front.jpg" class="shadow" alt="Immunocore's logo on the NASDAQ banner in Times Square, NY, on the day of their IPO."></a>
          </div>
       </div>
    </div>
