--- a/case-studies/merlin/index.html
+++ b/case-studies/merlin/index.html
@@ -12,7 +12,7 @@ label: case-study
    <div class="container">
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/merlin/merlin2.png" class="shadow">
+            <img src="/img/cases/merlin/merlin2.png" class="shadow" alt="Designing a schematic for a multi-arm clinical study in AstraZeneca's study design tool, Merlin.">
          </div>
       </div>
 
@@ -56,13 +56,13 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/merlin/merlin-performance.jpg" class="shadow">
+            <img src="/img/cases/merlin/merlin-performance.jpg" class="shadow" alt="I introduced changes to UX process and scope that brought a 3&times; performance boost to the UX team, evidenced by improved burndown rates from Feb 2023 to June 2024.">
          </div>
       </div>
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               I introduced changes to UX process and scope that brought a 3× performance boost to the UX team, evidenced by improved burndown rates from Feb 2023 to June 2024.
+               I introduced changes to UX process and scope that brought a 3&times; performance boost to the UX team, evidenced by improved burndown rates from Feb 2023 to June 2024.
             </h4>
          </div>
       </div>
@@ -84,7 +84,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/merlin/merlin-interview.jpg" class="shadow">
+            <img src="/img/cases/merlin/merlin-interview.jpg" class="shadow" alt="Low-fidelity prototypes helped us validate the solution, align the team on shared vision, support product prioritisation, and deliver parallel workstreams towards a common goal.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -115,8 +115,8 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/merlin/merlin1.png" class="image-gallery shadow">
-            <img src="/img/cases/merlin/merlin3.png" class="image-gallery shadow">
+            <img src="/img/cases/merlin/merlin1.png" class="image-gallery shadow" alt="Users can now control all clinical study metrics when optimising study design.">
+            <img src="/img/cases/merlin/merlin3.png" class="image-gallery shadow" alt="Monitoring rising total cost as users add sites to accelerate recruitment.">
          </div>
       </div>
       <div class="container-one-third shift-back">
