--- a/case-studies/target-triage/index.html
+++ b/case-studies/target-triage/index.html
@@ -12,7 +12,7 @@ label: case-study
    <div class="container">
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/triage/triage-app4.jpg" class="shadow">
+            <img src="/img/cases/triage/triage-app4.jpg" class="shadow" alt="Drug discoverer evaluating new target recommendations in the Target Triage tool.">
          </div>
       </div>
 
@@ -45,7 +45,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/triage/triage-users.jpg" class="shadow">
+            <img src="/img/cases/triage/triage-users.jpg" class="shadow" alt="Scientists triaging targets in Target Triage — view on the web app.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -68,7 +68,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/triage/triage-schema.png" class="shadow">
+            <img src="/img/cases/triage/triage-schema.png" class="shadow" alt="System architecture was simple. Complexity was in ranking targets in the List of Targets, organising evidence in the Target Detail Page, and capturing human-in-the-loop feedback in the Decision Page.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -84,7 +84,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/triage/triage-sketch1.jpg" class="shadow">
+            <img src="/img/cases/triage/triage-sketch1.jpg" class="shadow" alt="In wireframes, I used colour-coding to separate MVP scope from future plans. This let the team align on current build in the context of long-term product vision.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -109,8 +109,8 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/triage/triage-app6.png" class="image-gallery shadow">
-            <img src="/img/cases/triage/triage-cards1.png" class="image-gallery shadow">
+            <img src="/img/cases/triage/triage-app6.png" class="image-gallery shadow" alt="In the Target Details Page, users evaluate the biological rationale, safety, mode of action, novelty, and tractability of AI-predicted targets.">
+            <img src="/img/cases/triage/triage-cards1.png" class="image-gallery shadow" alt="Target detail cards showing evidence for triage evaluation.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -133,7 +133,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/triage/triage-app1.png" class="shadow">
+            <img src="/img/cases/triage/triage-app1.png" class="shadow" alt="Previously we have looked at data sets in silos but here we can really get an overview of all available data sets. — AstraZeneca science leader">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -162,7 +162,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/triage/triage-pipeline2.jpg" class="shadow">
+            <img src="/img/cases/triage/triage-pipeline2.jpg" class="shadow" alt="BenevolentAI drug candidate pipeline">
          </div>
       </div>
       <div class="container-one-third shift-back">
