--- a/case-studies/vivli/index.html
+++ b/case-studies/vivli/index.html
@@ -54,9 +54,9 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/vivli/vivli-models.png" class="image-gallery shadow">
-            <img src="/img/cases/vivli/vivli-sketches.jpg" class="image-gallery shadow">
-            <img src="/img/cases/vivli/vivli-workflow.png" class="image-gallery shadow">
+            <img src="/img/cases/vivli/vivli-models.png" class="image-gallery shadow" alt="I invited Vivli's technical leadership to co-design.">
+            <img src="/img/cases/vivli/vivli-sketches.jpg" class="image-gallery shadow" alt="We used concept modeling, sketching, and process design to shape the user experience.">
+            <img src="/img/cases/vivli/vivli-workflow.png" class="image-gallery shadow" alt="Information architecture of Vivli's new data sharing platform.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -82,8 +82,8 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/vivli/vivli-prototype.png" class="image-gallery shadow">
-            <img src="/img/cases/vivli/vivli-demo.png" class="image-gallery shadow">
+            <img src="/img/cases/vivli/vivli-prototype.png" class="image-gallery shadow" alt="Through prototyping, I showcased the experience for two types of Vivli users: Data Submitters and Data Requesters.">
+            <img src="/img/cases/vivli/vivli-demo.png" class="image-gallery shadow" alt="A narrated demo showing how the platform delivers value to both groups won the hearts of Vivli's stakeholders.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -112,7 +112,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/vivli/vivli-email-from-ida.png" class="shadow">
+            <img src="/img/cases/vivli/vivli-email-from-ida.png" class="shadow" alt="Email of appreciation from Ida Sim, one of Vivli co-founders.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -161,14 +161,14 @@ label: case-study
                <h3>
                   How can we improve discoverability of clinical studies through a better search interface?
                </h3>
-               <img src="/img/cases/vivli/vivli-search.png" class="shadow">
+               <img src="/img/cases/vivli/vivli-search.png" class="shadow" alt="Vivli search interface with interactive query tool augmented by the PICO framework.">
                <p>
                   Existing platforms offer limited search capabilities, restricted to a minimal selection of high-level search terms. Vivli will provide access to rich metadata annotation, allowing requesters to create rich search queries.
                </p>
                <p>
                   We designed an interactive query tool augmented by the <a href="https://community.cochrane.org/pico-search-about">PICO</a> framework (Population, Intervention, Comparator, Outcome) to help researchers formulate clinical questions and precise queries.
                </p>
-               <img src="/img/cases/vivli/vivli-result.png" class="shadow">
+               <img src="/img/cases/vivli/vivli-result.png" class="shadow" alt="Search result with data quality score and high-level data schema for requesters to review before requesting.">
                <p>
                   We also found that researchers often waste time requesting data that turns out to be of low quality or lacking relevant variables.
                </p>
@@ -181,7 +181,7 @@ label: case-study
                <h3>
                   How can an online platform incentivise academics to share data?
                </h3>
-               <img src="/img/cases/vivli/vivli-citations.png" class="shadow">
+               <img src="/img/cases/vivli/vivli-citations.png" class="shadow" alt="Mechanism for tracking data usage and citations on the submitter's account.">
                <p>
                   We found that academic researchers who conduct clinical trials find limited value in making their data available for secondary analysis. This is unless data sharing is rewarded in academia's main currency — publication citations.
                </p>
@@ -194,7 +194,7 @@ label: case-study
                <h3>
                   How can we ensure that data curation is as fast, accurate and as complete as possible?
                </h3>
-               <img src="/img/cases/vivli/vivli-curate.png" class="shadow">
+               <img src="/img/cases/vivli/vivli-curate.png" class="shadow" alt="Curation process with automatic extraction of metadata elements and manual refinement of metadata annotation.">
                <p>
                   Searches for studies are only as good as the study description that is curated during study submission.
                </p>
@@ -207,7 +207,7 @@ label: case-study
                <h3>
                   How can the user interface strengthen transparency of the data sharing experience?
                </h3>
-               <img src="/img/cases/vivli/vivli-wait.png" class="shadow">
+               <img src="/img/cases/vivli/vivli-wait.png" class="shadow" alt="Live visualisations of the request status, tailored wait estimations, and a simplified online data usage agreement.">
                <p>
                   Because of the sensitive nature of clinical study data, sharing is subject to a review process, legal controls, and data processing that takes time and is handled by multiple stakeholders.
                </p>
