--- a/case-studies/concept2/index.html
+++ b/case-studies/concept2/index.html
@@ -12,7 +12,7 @@ label: case-study
    <div class="container">
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/concept2/concept2-filming-crew.jpg" class="shadow">
+            <img src="/img/cases/concept2/concept2-filming-crew.jpg" class="shadow" alt="On set during the photoshoot for the Concept2 inhaler training video.">
             <h5 class="secondary-annotation">Cinematography by Maik Kleinschmidt</h5>
          </div>
       </div>
@@ -46,9 +46,9 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/concept2/concept2-instructions.png" class="image-gallery shadow">
-            <img src="/img/cases/concept2/concept2-prototype.png" class="image-gallery shadow">
-            <img src="/img/cases/concept2/concept2-pov.jpg" class="image-gallery shadow">
+            <img src="/img/cases/concept2/concept2-instructions.png" class="image-gallery shadow" alt="Traditional training came in the form of a printed comic strip. Lots of room for user error, as well as opportunity for improvement through digitisation.">
+            <img src="/img/cases/concept2/concept2-prototype.png" class="image-gallery shadow" alt="I prototyped the new video training using stills and short videos synchronised with the voiceover script and follow-along inhalation visualisations.">
+            <img src="/img/cases/concept2/concept2-pov.jpg" class="image-gallery shadow" alt="I also evaluated the potential of first-person video to improve inhaler training.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -82,7 +82,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/concept2/concept2-script.jpg" class="image-gallery shadow">
+            <img src="/img/cases/concept2/concept2-script.jpg" class="image-gallery shadow" alt="Screens from the final production with follow-along instructions for preparation and timed inhalation.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -105,7 +105,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/concept2/concept2-video.jpg" class="image-gallery shadow">
+            <img src="/img/cases/concept2/concept2-video.jpg" class="image-gallery shadow" alt="Screen from the Czech version of the Concept2 training video.">
          </div>
       </div>
       <div class="container-one-third shift-back">
