--- a/case-studies/entity-explorer/index.html
+++ b/case-studies/entity-explorer/index.html
@@ -12,7 +12,7 @@ label: case-study
    <div class="container">
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/ee/ee-vis1.jpg" class="shadow">
+            <img src="/img/cases/ee/ee-vis1.jpg" class="shadow" alt="Entity Explorer case study hero image">
          </div>
       </div>
 
@@ -45,7 +45,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/ee/ee-venn.png" class="shadow">
+            <img src="/img/cases/ee/ee-venn.png" class="shadow" alt="Entity selection is the process of identifying most relevant graph entities that will drive AI model predictions. Best entities would be saved in the shortlist.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -75,7 +75,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/ee/ee-discovery.jpg" class="shadow">
+            <img src="/img/cases/ee/ee-discovery.jpg" class="shadow" alt="Stimulus-based interviews with internal users helped define Entity Explorer's vision within the end-to-end platform.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -97,8 +97,8 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/ee/ee-sketch1.jpg" class="image-gallery shadow">
-            <img src="/img/cases/ee/ee-ontology1.png" class="image-gallery shadow">
+            <img src="/img/cases/ee/ee-sketch1.jpg" class="image-gallery shadow" alt="Hand-drawn sketches taken straight into code with no hand-off.">
+            <img src="/img/cases/ee/ee-ontology1.png" class="image-gallery shadow" alt="Our Design System sped up development and enabled pair-working with engineers.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -127,9 +127,9 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/ee/ee-explore1.png" class="image-gallery shadow">
-            <img src="/img/cases/ee/ee-explore2.png" class="image-gallery shadow">
-            <img src="/img/cases/ee/ee-vis1.jpg" class="image-gallery shadow">
+            <img src="/img/cases/ee/ee-explore1.png" class="image-gallery shadow" alt="Entity Explorer gives access to entity exploration tools.">
+            <img src="/img/cases/ee/ee-explore2.png" class="image-gallery shadow" alt="Entity Explorer entity comparison view.">
+            <img src="/img/cases/ee/ee-vis1.jpg" class="image-gallery shadow" alt="Gene interaction network visualisation.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -155,7 +155,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/ee/ee-metrics.png" class="shadow">
+            <img src="/img/cases/ee/ee-metrics.png" class="shadow" alt="Excerpt from product analytics metrics showing the increase in utilisation of data-driven recommendations after redesign.">
          </div>
       </div>
       <div class="container-one-third shift-back">
