--- a/case-studies/evinova/index.html
+++ b/case-studies/evinova/index.html
@@ -12,7 +12,7 @@ label: case-study
    <div class="container">
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/evinova/evinova-site9.png" class="shadow">
+            <img src="/img/cases/evinova/evinova-site9.png" class="shadow" alt="Meeting with the Barcelona's Sant Joan de Déu pediatric trial site team in summer 2024.">
          </div>
       </div>
 
@@ -57,7 +57,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/evinova/evinova-insights4.png" class="shadow">
+            <img src="/img/cases/evinova/evinova-insights4.png" class="shadow" alt="The way sponsors set up teams to design studies exacerbates the problem. Structured ClinDev-ClinOps handoffs kill collaboration which is critical for holistic optimisation in the early stages of trial design, when most can be achieved.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -100,7 +100,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/evinova/evinova-market7.png" class="shadow">
+            <img src="/img/cases/evinova/evinova-market7.png" class="shadow" alt="Using the storyboards and screens as stimulus, I ran a 2-week market research exercise, interviewing ClinOps leaders from nine top-20 pharma companies.">
             <h5 class="secondary-annotation">Storyboard drawings by Florencia Novello</h5>
          </div>
       </div>
@@ -143,7 +143,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/evinova/evinova-soa3.png" class="shadow">
+            <img src="/img/cases/evinova/evinova-soa3.png" class="shadow" alt="SoA tables are the backbone of every clinical trial. They define trial visits (columns) and procedures (rows), and specify the frequency of each activity.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -170,7 +170,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/evinova/evinova-post1.png" class="shadow">
+            <img src="/img/cases/evinova/evinova-post1.png" class="shadow" alt="Based on my vibe-coding experiments with emerging GenAI tools, I helped build the company-wide case for AI adoption.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -191,7 +191,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/evinova/evinova-teaser5.png" class="shadow">
+            <img src="/img/cases/evinova/evinova-teaser5.png" class="shadow" alt="Objectives and Endpoints view: one of the work-in-progress concepts to support a ROI review of trial endpoints.">
          </div>
       </div>
       <div class="container-one-third shift-back">
