--- a/contact/index.html
+++ b/contact/index.html
@@ -22,7 +22,7 @@ label: contact
    </div>
    <div class="container">
       <div class="container-one-third shift contact-image">
-         <img src="/img/contact/mk.jpg" class="shadow">
+         <img src="/img/contact/mk.jpg" class="shadow" alt="Marek Kultys looking through a window in the Science Practice office in Old Street">
       </div>
    </div>
 </section>
