Add alt tags to images in Influences

--- a/influences/index.html
+++ b/influences/index.html
@@ -36,7 +36,7 @@ label: influences
       </div>
       <div class="container-two-thirds shift" id="fix-reduced-margin">
          <div class="block-margin">
-            <img src="/img/influences/isotype.jpg" class="shadow">
+            <img src="/img/influences/isotype.jpg" class="shadow" alt="Only An Ocean Between by L. Secor Florence with 18 charts designed by the Isotype Institute">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -62,7 +62,7 @@ label: influences
       </div>
       <div class="container-two-thirds shift" id="fix-reduced-margin">
          <div class="block-margin">
-            <img src="/img/influences/teoria-widzenia.jpg" class="shadow">
+            <img src="/img/influences/teoria-widzenia.jpg" class="shadow" alt="Bison with arrowheads — cave painting from Niaux, France, paleolithic period. Re-drawn by W. Strzemiński">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -89,7 +89,7 @@ label: influences
       </div>
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/influences/senelnikov.jpg" class="shadow">
+            <img src="/img/influences/senelnikov.jpg" class="shadow" alt="Atlas of Human Anatomy by R. D. Sinelnikov">
          </div>
       </div>
       <div class="container-one-third shift-back">
