Add alt tags to images in Home

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ label: home
 <section>
    <div class="container">
       <div class="container-one-third">
-         <img src="/img/voyager-alpha3.png" class="banner"/>
+         <img src="/img/voyager-alpha3.png" class="banner" alt="Design Space Exploration — Voyager spacecraft drawn by Marek Kultys"/>
       </div>
       <div class="container-two-thirds">
          <p>
