Add target _blank to all pages

--- a/case-studies/concept2/index.html
+++ b/case-studies/concept2/index.html
@@ -34,7 +34,7 @@ label: case-study
       <div class="container-two-thirds shift">
             <h3>The Challenge</h3>
             <p>
-               It has been reported that only 40-60% of COPD patients adhere to prescribed drug regimen, and only 1 out of 10 perform inhalation correctly (<a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC2629978/">source</a>). Pharma companies aim to improve health outcomes by developing digital tools that support better adherence and technique.
+               It has been reported that only 40-60% of COPD patients adhere to prescribed drug regimen, and only 1 out of 10 perform inhalation correctly (<a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC2629978/" target="_blank">source</a>). Pharma companies aim to improve health outcomes by developing digital tools that support better adherence and technique.
             </p>
             <p>
                In 2017, Novartis developed a smart inhaler called Concept2 that could detect the occurence and quality of inhallations. To pair with Concept2, a new patient-facing app was needed to track medication adherence, set routines, and coach COPD patients. A phase III study was planned to evaluate the benefits of Concept2.
@@ -119,7 +119,7 @@ label: case-study
       <div class="container-two-thirds shift">
          <h3>The Result</h3>
          <p>
-            The video was used in the Novartis <a href="https://clinicaltrials.gov/study/NCT03379233?term=NCT03379233&rank=1">NCT03379233</a> clinical trial that aimed to evaluate the effects of digital interventions on patient adherence and engagement.
+            The video was used in the Novartis <a href="https://clinicaltrials.gov/study/NCT03379233?term=NCT03379233&rank=1" target="_blank">NCT03379233</a> clinical trial that aimed to evaluate the effects of digital interventions on patient adherence and engagement.
          </p>
          <p>
             Patients were successfully onboarded and trained, but the trial was discontinued due to an inhaler device malfunction.
