--- a/case-studies/immunocore/index.html
+++ b/case-studies/immunocore/index.html
@@ -33,7 +33,7 @@ label: case-study
       <div class="container-two-thirds shift">
          <h3>The Challenge</h3>
          <p>
-            <a href="https://www.immunocore.com/">Immunocore</a> is a $1.73 bn Nasdaq-listed company that developed the world's first approved T cell receptor therapy (based on the ImmTAX technology).
+            <a href="https://www.immunocore.com/" target="_blank">Immunocore</a> is a $1.73 bn Nasdaq-listed company that developed the world's first approved T cell receptor therapy (based on the ImmTAX technology).
          </p>
          <p>
             In 2012, I was asked to build a visual science communication pack to explain how ImmTAX kills cancer cells and to mature the brand.
