--- a/case-studies/vivli/index.html
+++ b/case-studies/vivli/index.html
@@ -166,7 +166,7 @@ label: case-study
                   Existing platforms offer limited search capabilities, restricted to a minimal selection of high-level search terms. Vivli will provide access to rich metadata annotation, allowing requesters to create rich search queries.
                </p>
                <p>
-                  We designed an interactive query tool augmented by the <a href="https://community.cochrane.org/pico-search-about">PICO</a> framework (Population, Intervention, Comparator, Outcome) to help researchers formulate clinical questions and precise queries.
+                  We designed an interactive query tool augmented by the <a href="https://community.cochrane.org/pico-search-about" target="_blank">PICO</a> framework (Population, Intervention, Comparator, Outcome) to help researchers formulate clinical questions and precise queries.
                </p>
                <img src="/img/cases/vivli/vivli-result.png" class="shadow" alt="Search result with data quality score and high-level data schema for requesters to review before requesting.">
                <p>
