--- a/contact/index.html
+++ b/contact/index.html
@@ -12,10 +12,10 @@ label: contact
                <span class="email-copy" data-email="{{ site.data.mk.email }}@gmail.com">{{ site.data.mk.email }}@gmail.com</span>
             </li>
             <li>
-               LinkedIn: <a href="https://linkedin.com/in/marek-kultys/">{{ site.data.mk.author }}</a>
+               LinkedIn: <a href="https://linkedin.com/in/marek-kultys/" target="_blank">{{ site.data.mk.author }}</a>
             </li>
             <li>
-               GitHub: <a href="https://github.com/marek-kultys">{{ site.data.mk.github }}</a>
+               GitHub: <a href="https://github.com/marek-kultys" target="_blank">{{ site.data.mk.github }}</a>
             </li>
          </ol>
       </div>
