--- a/case-studies/evinova/index.html
+++ b/case-studies/evinova/index.html
@@ -35,7 +35,7 @@ label: case-study
             <i>— Please help me help my patients!</i>
          </p>
          <p>
-            This plea from Barcelona's Sant Joan de Déu pediatric trial site team in summer 2024 crystallised a global crisis: clinical trials are drowning in complexity. <a href="https://f.hubspotusercontent10.net/hubfs/9468915/TuftsCSDD_June2021/pdf/Rising+Protocol+Design+Complexity+is+Driving+Rapid+Growth+in+Clinical+Trial+Data+Volume++++++++++.pdf">Tufts research</a> revealed a staggering increase in the number of procedures per trial and patient, which puts unreasonable burden on patients and sites, stifling drug R&D.
+            This plea from Barcelona's Sant Joan de Déu pediatric trial site team in summer 2024 crystallised a global crisis: clinical trials are drowning in complexity. <a href="https://f.hubspotusercontent10.net/hubfs/9468915/TuftsCSDD_June2021/pdf/Rising+Protocol+Design+Complexity+is+Driving+Rapid+Growth+in+Clinical+Trial+Data+Volume++++++++++.pdf" target="_blank">Tufts research</a> revealed a staggering increase in the number of procedures per trial and patient, which puts unreasonable burden on patients and sites, stifling drug R&D.
          </p>
          <p>
             In 2024, I set out with my team at Evinova to tackle this crisis.
@@ -136,7 +136,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <p>
-            These insights shaped our strategy. I led design and development of key elements of a digital trial protocol: Schedule of Activities (SoA), Eligibility Criteria, Study Schema, Objectives and Endpoints. Together, these enable structured trial design aligned to <a href="https://www.cdisc.org/ddf">industry standards</a>, real-time metrics, and cross-team collaboration.
+            These insights shaped our strategy. I led design and development of key elements of a digital trial protocol: Schedule of Activities (SoA), Eligibility Criteria, Study Schema, Objectives and Endpoints. Together, these enable structured trial design aligned to <a href="https://www.cdisc.org/ddf" target="_blank">industry standards</a>, real-time metrics, and cross-team collaboration.
          </p>
       </div>
 
@@ -176,7 +176,7 @@ label: case-study
       <div class="container-one-third shift-back">
          <div class="caption-margin">
             <h4 class="caption">
-               Based on my vibe-coding experiments with emerging GenAI tools, I helped build the company-wide case for AI adoption. My evaluation was shared on <a href="https://www.linkedin.com/posts/marek-kultys_i-used-genai-to-accelerate-time-to-insight-activity-7333522030786437120-JDs3?utm_source=share&utm_medium=member_desktop&rcm=ACoAAAPT12oBw9huIJSVosm9nXB9UKoQ5YOJPfI">LinkedIn</a>.
+               Based on my vibe-coding experiments with emerging GenAI tools, I helped build the company-wide case for AI adoption. My evaluation was shared on <a href="https://www.linkedin.com/posts/marek-kultys_i-used-genai-to-accelerate-time-to-insight-activity-7333522030786437120-JDs3?utm_source=share&utm_medium=member_desktop&rcm=ACoAAAPT12oBw9huIJSVosm9nXB9UKoQ5YOJPfI" target="_blank">LinkedIn</a>.
             </h4>
          </div>
       </div>
